Fix text overflow in header content

--- a/style.css
+++ b/style.css
@@ -161,9 +161,9 @@ header {
 
 .header__content h1 {
   margin-bottom: 1rem;
-  font-size: 4rem;
+  font-size: clamp(3rem, 7vw, 4rem);
   font-weight: 900;
-  line-height: 5.5rem;
+  line-height: 1.2;
   color: var(--text-dark);
   text-align: center;
 }
@@ -179,7 +179,7 @@ header {
   top: 0;
   left: -1rem;
   height: 100%;
-  width: calc(100% + 4rem);
+  width: calc(100% + 2.5rem);
   transform: rotate(-2deg);
   z-index: -1;
 }
